# misalud-entendida

./: .gitignore  CLAUDE.md  PROJECT_SPECS.md  README.md  RESEARCH.md  ROADMAP.md  SUBMISSION_DECISION_PLAN.md  main.py  medgemma_official_example.py  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-inference-runtime-strategy.md
eval/: README.md  SCORING.md  lab_labels.jsonl  manifest.csv  prescriptions_labels.jsonl  review_app.py
samples/: README.md
samples/raw/: lab_results.txt
scripts/: compare_labs_ocrmac.py  compare_prescriptions_ocrmac.py  validate_drug_matcher.py  validate_extraction.py
src/: __init__.py  app.py  interactions.py  logger.py  models.py  prompts.py
src/api/: __init__.py  cum.py  drug_matcher.py  sismed.py
src/inference/: __init__.py  constants.py  medgemma.py  modal_app.py  utils.py
src/io/: __init__.py  document_ingestion.py
src/pipelines/: __init__.py  document_chat.py  document_orchestrator.py  document_router.py  lab_results_pipeline.py  prescription_enrichment.py  prescription_pipeline.py  spanish_explanations.py
tests/: __init__.py  conftest.py  test_app_handlers.py  test_document_chat.py  test_document_ingestion.py  test_document_orchestrator.py  test_document_router.py  test_drug_matcher.py  test_lab_results_pipeline.py  test_prescription_enrichment.py  test_prescription_pipeline.py  test_spanish_explanations.py
